Tests/Modules/Error/InHandler/.build/throworiginal.pr
{
  "name": "ThrowOriginal",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022original error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "original error",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/InHandler/ThrowOriginal.goal",
  "prPath": "/Modules/Error/InHandler/.build/throworiginal.pr",
  "hash": "9dbe60fc7451268112efa128e62230ccb7b045feed3ae32b253cd3de24f820a3",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}